2013-08-22  ------ inet-2.2.0 released ------

2013-01-30  ------ inet-2.1.0 released ------

2012-09-18  Zoltan Bojthe

	A new module to model an "internet cloud". The module can be used 
	to model the throughput, packet delay and packet drop of the 
	Internet or other large scale networks.
	
2012-09-07  Zoltan Bojthe

	Initial implementation of the internet cloud node. The component can
	be configured to model packet delay, datarate and drop probability
	between each input-output interface pair. The parameter matrix
	is provided as an XML configuration file. See the README file
	in src/nodes/internetcloud for further details.